--- a/consumer/business-consumer/pom.xml
+++ b/consumer/business-consumer/pom.xml
@@ -3,32 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>distributed-demo</artifactId>
+        <artifactId>distributed-consumer</artifactId>
         <groupId>per.wilson.distributed</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>distributed-common</artifactId>
+    <artifactId>business-consumer</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>per.wilson.distributed</groupId>
-            <artifactId>entity</artifactId>
+            <artifactId>distributed-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>8.5.31</version>
+            <groupId>per.wilson.distributed</groupId>
+            <artifactId>entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
