--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -17,6 +17,7 @@
     <url>http://www.example.com</url>
     <modules>
         <module>user-consumer</module>
+        <module>business-consumer</module>
     </modules>
 
     <dependencies>
@@ -29,12 +30,6 @@
             <groupId>per.wilson.distributed</groupId>
             <artifactId>entity</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
