出坑：mapperScanner初始DAO乱序

--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -20,14 +20,10 @@
     </modules>
 
     <dependencies>
-        <dependency>
+     <!--   <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-all</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>per.wilson.distributed</groupId>
             <artifactId>distributed-common</artifactId>
