添加redis集群配置

--- a/provider/user/src/main/resources/application.yml
+++ b/provider/user/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: user-provider
   profiles:
-    include: jdbc
+    include: jdbc,redis
   cloud:
     consul:
       host: localhost
