--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
         <dubbo.version>2.6.1</dubbo.version>
         <logback.version>1.2.3</logback.version>
         <shiro.version>1.4.0</shiro.version>
+        <redis.version>2.9.0</redis.version>
+        <spring.data.redis.version>2.0.7.RELEASE</spring.data.redis.version>
     </properties>
 
     <parent>
@@ -162,12 +164,12 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
+            <version>${redis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>2.0.7.RELEASE</version>
+            <version>${spring.data.redis.version}</version>
         </dependency>
         <!--shiro-->
         <dependency>
