--- a/provider/user/src/main/resources/application.yml
+++ b/provider/user/src/main/resources/application.yml
@@ -4,30 +4,16 @@ spring:
   application:
     name: user-provider
   profiles:
-    include: jdbc,redis
+    include: jdbc,redis,dubbo
   cloud:
     consul:
       host: localhost
       port: 8500
       discovery:
-        health-check-path: /health/user-provider
+        health-check-path: /actuator/health
         service-name: user-provider
-      config:
         enabled: true
-
-dubbo:
-  scan:
-    base-packages: per.wilson.distributed.service
-  application:
-    name: provider
-    id: provider
-  protocol:
-    id: dubbo
-    name: dubbo
-    port: 33333
-  registry:
-    address: multicast://224.5.6.7:1234
-    check: false
+      enabled: true
 
 eureka:
   instance:
@@ -35,12 +21,7 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-    client:
-        enabled: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    enabled: true
 
-
-redis:
-  max-idle: 10
-  min-idle: 5
